Fix loading playlists encoded with CRLF

CRLF files end with \r\n. We were not accounting for the extra \r, so
were looking for music files like "myfile.flac\r"

Test-plan:
1. Create a sample playlist file
2. Convert to crlf with `unix2dos -n input.m3u output.m3u`
3. Confirm crlf endings with `cat -A output.m3u` (lines should end with
   ^M$)
4. Import playlist into Elisa

Before: error. Now: works fine

Also added a unit test.

BUG: 470721